moved ask oracle button to preview

--- a/Ironsworn/Ironsworn.html
+++ b/Ironsworn/Ironsworn.html
@@ -1038,7 +1038,6 @@
                     <label class="sheet-oracle-show" for="payThePriceOracle">Pay the Price</label>
                 </div>
                 <div class="sheet-oracle">
-                    <button type="roll" title="Ask the Oracle" name="rollasktheoracle" value="&{template:ironswornoracles} {{header=Ask the Oracle}} {{askTheOracle=[[1d00]]}}"></button>
                     <label class="sheet-oracle-show" for="askTheOracle">Ask the Oracle</label>
                 </div>
                 <div class="sheet-oracle">
@@ -2220,11 +2219,11 @@
             <div class="sheet-ask-the-oracle sheet-hidden-flex">
                 <div class="sheet-oracle-title sheet-oracle-table-preview">ASK THE ORACLE</div>
                 <div class="sheet-oracle-table">
-                    <div class="oracle-row"><span class="oracle-roll">11 or greater</span><span class="sheet-oracle-result">Almost Certain</span></div>
-                    <div class="oracle-row"><span class="oracle-roll">26 or greater</span><span class="sheet-oracle-result">Likely</span></div>
-                    <div class="oracle-row"><span class="oracle-roll">51 or greater</span><span class="sheet-oracle-result">50/50</span></div>
-                    <div class="oracle-row"><span class="oracle-roll">76 or greater</span><span class="sheet-oracle-result">Unlikely</span></div>
-                    <div class="oracle-row"><span class="oracle-roll">91 or greater</span><span class="sheet-oracle-result">Small Chance</span></div>
+                    <div class="oracle-row"><button type="roll" title="Almost Certain" name="rollalmostcertain" value="&{template:ironswornoracles} {{header=Almost Certain}} {{almostCertain=[[1d00]]}}"></button><span class="oracle-roll">11 or greater</span><span class="sheet-oracle-result">Almost Certain</span></div>
+                    <div class="oracle-row"><button type="roll" title="Likely" name="rolllikely" value="&{template:ironswornoracles} {{header=Likely}} {{likely=[[1d00]]}}"></button><span class="oracle-roll">26 or greater</span><span class="sheet-oracle-result">Likely</span></div>
+                    <div class="oracle-row"><button type="roll" title="50/50" name="rollfiftyfifty" value="&{template:ironswornoracles} {{header=50/50}} {{fiftyFifty=[[1d00]]}}"></button><span class="oracle-roll">51 or greater</span><span class="sheet-oracle-result">50/50</span></div>
+                    <div class="oracle-row"><button type="roll" title="Unlikely" name="rollunlikely" value="&{template:ironswornoracles} {{header=Unlikely}} {{unlikely=[[1d00]]}}"></button><span class="oracle-roll">76 or greater</span><span class="sheet-oracle-result">Unlikely</span></div>
+                    <div class="oracle-row"><button type="roll" title="Small Chance" name="rollsmallchance" value="&{template:ironswornoracles} {{header=Small Chance}} {{smallChance=[[1d00]]}}"></button><span class="oracle-roll">91 or greater</span><span class="sheet-oracle-result">Small Chance</span></div>
                 </div>
                 <div class="sheet-oracle-footer">On a match, an extreme result or twist has occurred.</div>
             </div>
@@ -3408,21 +3407,95 @@
             <tr><td colspan='2'><span>Something Else....</span></td></tr>
             {{/rollBetween() settlementName 91 00}}
         {{/settlementName}}
-        {{#askTheOracle}}
-            {{#rollBetween() askTheOracle 1 10}}
-            <tr><td colspan='2'><span></span></td></tr>
-            {{/rollBetween() askTheOracle 1 10}}
-            {{#rollBetween() askTheOracle 1 10}}
-            <tr><td colspan='2'><span></span></td></tr>
-            {{/rollBetween() askTheOracle 1 10}}
-            {{#rollBetween() askTheOracle 1 10}}
-            <tr><td colspan='2'><span></span></td></tr>
-            {{/rollBetween() askTheOracle 1 10}}
-            {{#rollBetween() askTheOracle 1 10}}
-            <tr><td colspan='2'><span></span></td></tr>
-            {{/rollBetween() askTheOracle 1 10}}
-        {{/askTheOracle}}
+        {{#almostCertain}}
+            {{#rollBetween() almostCertain 11 100}}
+            <tr><td colspan='2'><span>Yes</span></td></tr>
+            {{/rollBetween() almostCertain 11 100}}
+            {{#^rollBetween() almostCertain 11 100}}
+            <tr><td colspan='2'><span>No</span></td></tr>
+            {{/^rollBetween() almostCertain 11 100}}
+        {{/almostCertain}}
+        {{#likely}}
+            {{#rollBetween() likely 26 100}}
+            <tr><td colspan='2'><span>Yes</span></td></tr>
+            {{/rollBetween() likely 26 100}}
+            {{#^rollBetween() likely 26 100}}
+            <tr><td colspan='2'><span>No</span></td></tr>
+            {{/^rollBetween() likely 26 100}}
+        {{/likely}}
+        {{#fiftyFifty}}
+            {{#rollBetween() fiftyFifty 51 100}}
+            <tr><td colspan='2'><span>Yes</span></td></tr>
+            {{/rollBetween() fiftyFifty 51 100}}
+            {{#^rollBetween() fiftyFifty 51 100}}
+            <tr><td colspan='2'><span>No</span></td></tr>
+            {{/^rollBetween() fiftyFifty 51 100}}
+        {{/fiftyFifty}}
+        {{#unlikely}}
+            {{#rollBetween() unlikely 76 100}}
+            <tr><td colspan='2'><span>Yes</span></td></tr>
+            {{/rollBetween() unlikely 76 100}}
+            {{#^rollBetween() unlikely 76 100}}
+            <tr><td colspan='2'><span>No</span></td></tr>
+            {{/^rollBetween() unlikely 76 100}}
+        {{/unlikely}}
+        {{#smallChance}}
+            {{#rollBetween() smallChance 91 100}}
+            <tr><td colspan='2'><span>Yes</span></td></tr>
+            {{/rollBetween() smallChance 91 100}}
+            {{#^rollBetween() smallChance 91 100}}
+            <tr><td colspan='2'><span>No</span></td></tr>
+            {{/^rollBetween() smallChance 91 100}}
+        {{/smallChance}}
         {{#payThePrice}}
+            {{#rollBetween() payThePrice 1 2}}
+            <tr><td colspan='2'><span>Roll again and apply that result but make it worse. If you roll this result yet again, think of something dreadful that changes the course of your quest (<em>Ask the Oracle</em> if unsure) and make it happen.</span></td></tr>
+            {{/rollBetween() payThePrice 1 2}}
+            {{#rollBetween() payThePrice 3 5}}
+            <tr><td colspan='2'><span>A person or community you trusted loses faith in you, or acts against you.</span></td></tr>
+            {{/rollBetween() payThePrice 3 5}}
+            {{#rollBetween() payThePrice 6 9}}
+            <tr><td colspan='2'><span>A person or community you care about is exposed to danger.</span></td></tr>
+            {{/rollBetween() payThePrice 6 9}}
+            {{#rollBetween() payThePrice 10 16}}
+            <tr><td colspan='2'><span>You are separated from something or someone.</span></td></tr>
+            {{/rollBetween() payThePrice 10 16}}
+            {{#rollBetween() payThePrice 17 23}}
+            <tr><td colspan='2'><span>Your action has an unintended effect.</span></td></tr>
+            {{/rollBetween() payThePrice 17 23}}
+            {{#rollBetween() payThePrice 24 32}
+            <tr><td colspan='2'><span>Something of value is lost or destroyed.</span></td></tr>
+            {{/rollBetween() payThePrice 24 32}
+            {{#rollBetween() payThePrice 33 41}}
+            <tr><td colspan='2'><span>The current situation worsens</span></td></tr>
+            {{/rollBetween() payThePrice 33 41}}
+            {{#rollBetween() payThePrice 42 50}}
+            <tr><td colspan='2'><span>A new danger or foe is revealed.</span></td></tr>
+            {{/rollBetween() payThePrice 42 50}}
+            {{#rollBetween() payThePrice 51 59}
+            <tr><td colspan='2'><span>It causes a delay or puts you at a disadvantage.</span></td></tr>
+            {{/rollBetween() payThePrice 51 59}
+            {{#rollBetween() payThePrice 60 68}}
+            <tr><td colspan='2'><span>It is harmful.</span></td></tr>
+            {{/rollBetween() payThePrice 60 68}}
+            {{#rollBetween() payThePrice 69 77}}
+            <tr><td colspan='2'><span>It is stressful.</span></td></tr>
+            {{/rollBetween() payThePrice 69 77}}
+            {{#rollBetween() payThePrice 78 85}}
+            <tr><td colspan='2'><span>A surprising development complicates your quest.</span></td></tr>
+            {{/rollBetween() payThePrice 78 85}}
+            {{#rollBetween() payThePrice 86 90}}
+            <tr><td colspan='2'><span>It wastes resources.</span></td></tr>
+            {{/rollBetween() payThePrice 86 90}}
+            {{#rollBetween() payThePrice 91 94}}
+            <tr><td colspan='2'><span>It forces you to act against your best intentions.</span></td></tr>
+            {{/rollBetween() payThePrice 91 94}}
+            {{#rollBetween() payThePrice 95 98}}
+            <tr><td colspan='2'><span>A friend, companion, or ally is put in harm’s way (or you are, if alone)</span></td></tr>
+            {{/rollBetween() payThePrice 95 98}}
+            {{#rollBetween() payThePrice 99 100}}
+            <tr><td colspan='2'><span>Roll twice more on this table. Both results occur. If they are the same result, make it worse.</span></td></tr>
+            {{/rollBetween() payThePrice 99 100}}
         {{/payThePrice}}
         {{#endureHarm}}
             {{#rollBetween() endureHarm 1 10}}
