added empty tables

--- a/Ironsworn/Ironsworn.html
+++ b/Ironsworn/Ironsworn.html
@@ -3407,6 +3407,49 @@
             <tr><td colspan='2'><span>Something Else....</span></td></tr>
             {{/rollBetween() settlementName 91 00}}
         {{/settlementName}}
+
+        {{#quickSettlementName}}
+        {{/quickSettlementName}}
+        
+        {{#settlementTrouble}}
+        {{/settlementTrouble}}
+
+        {{#characterRole}}
+        {{/characterRole}}
+
+        {{#characterGoal}}
+        {{/characterGoal}}
+
+        {{#characterDescriptor}}
+        {{/characterDescriptor}}
+
+        {{#ironlanderNames}}
+        {{/ironlanderNames}}
+
+        {{#elfNames}}
+        {{/elfNames}}
+
+        {{#giantNames}}
+        {{/giantNames}}
+
+        {{#varouNames}}
+        {{/varouNames}}
+
+        {{#trollNames}}
+        {{/trollNames}}
+
+        {{#combatAction}}
+        {{/combatAction}}
+
+        {{#mysticBacklash}}
+        {{/mysticBacklash}}
+
+        {{#majorPlotTwist}}
+        {{/majorPlotTwist}}
+
+        {{#challengeRank}}
+        {{/challengeRank}}
+
         {{#almostCertain}}
             {{#rollBetween() almostCertain 11 100}}
             <tr><td colspan='2'><span>Yes</span></td></tr>
