added combat actions

--- a/Ironsworn/Ironsworn.html
+++ b/Ironsworn/Ironsworn.html
@@ -8012,13 +8012,155 @@
         <tr>
             <td>
                 {{#rollBetween() quickSettlementNamePrefix 1 4}}
-                <span>Bleak-</span>
+                <span>Bleak</span>
                 {{/rollBetween() quickSettlementNamePrefix 1 4}}
-            </td>
-            <td>
+                {{#rollBetween() quickSettlementNamePrefix 5 8}}
+                <span>Green</span>
+                {{/rollBetween() quickSettlementNamePrefix 5 8}}
+                {{#rollBetween() quickSettlementNamePrefix 9 12}}
+                <span>Wolf</span>
+                {{/rollBetween() quickSettlementNamePrefix 9 12}}
+                {{#rollBetween() quickSettlementNamePrefix 13 16}}
+                <span>Raven</span>
+                {{/rollBetween() quickSettlementNamePrefix 13 16}}
+                {{#rollBetween() quickSettlementNamePrefix 17 20}}
+                <span>Gray</span>
+                {{/rollBetween() quickSettlementNamePrefix 17 20}}
+                {{#rollBetween() quickSettlementNamePrefix 21 24}}
+                <span>Red</span>
+                {{/rollBetween() quickSettlementNamePrefix 21 24}}
+                {{#rollBetween() quickSettlementNamePrefix 25 28}}
+                <span>Axe</span>
+                {{/rollBetween() quickSettlementNamePrefix 25 28}}
+                {{#rollBetween() quickSettlementNamePrefix 29 32}}
+                <span>Great</span>
+                {{/rollBetween() quickSettlementNamePrefix 29 32}}
+                {{#rollBetween() quickSettlementNamePrefix 33 36}}
+                <span>Wood</span>
+                {{/rollBetween() quickSettlementNamePrefix 33 36}}
+                {{#rollBetween() quickSettlementNamePrefix 37 40}}
+                <span>Low</span>
+                {{/rollBetween() quickSettlementNamePrefix 37 40}}
+                {{#rollBetween() quickSettlementNamePrefix 41 44}}
+                <span>White</span>
+                {{/rollBetween() quickSettlementNamePrefix 41 44}}
+                {{#rollBetween() quickSettlementNamePrefix 45 48}}
+                <span>Storm</span>
+                {{/rollBetween() quickSettlementNamePrefix 45 48}}
+                {{#rollBetween() quickSettlementNamePrefix 49 52}}
+                <span>Black</span>
+                {{/rollBetween() quickSettlementNamePrefix 49 52}}
+                {{#rollBetween() quickSettlementNamePrefix 53 56}}
+                <span>Mourn</span>
+                {{/rollBetween() quickSettlementNamePrefix 53 56}}
+                {{#rollBetween() quickSettlementNamePrefix 57 60}}
+                <span>New</span>
+                {{/rollBetween() quickSettlementNamePrefix 57 60}}
+                {{#rollBetween() quickSettlementNamePrefix 61 64}}
+                <span>Stone</span>
+                {{/rollBetween() quickSettlementNamePrefix 61 64}}
+                {{#rollBetween() quickSettlementNamePrefix 65 68}}
+                <span>Grim</span>
+                {{/rollBetween() quickSettlementNamePrefix 65 68}}
+                {{#rollBetween() quickSettlementNamePrefix 69 72}}
+                <span>Lost</span>
+                {{/rollBetween() quickSettlementNamePrefix 69 72}}
+                {{#rollBetween() quickSettlementNamePrefix 73 76}}
+                <span>High</span>
+                {{/rollBetween() quickSettlementNamePrefix 73 76}}
+                {{#rollBetween() quickSettlementNamePrefix 77 80}}
+                <span>Rock</span>
+                {{/rollBetween() quickSettlementNamePrefix 77 80}}
+                {{#rollBetween() quickSettlementNamePrefix 81 84}}
+                <span>Shield</span>
+                {{/rollBetween() quickSettlementNamePrefix 81 84}}
+                {{#rollBetween() quickSettlementNamePrefix 85 88}}
+                <span>Sword</span>
+                {{/rollBetween() quickSettlementNamePrefix 85 88}}
+                {{#rollBetween() quickSettlementNamePrefix 89 92}}
+                <span>Frost</span>
+                {{/rollBetween() quickSettlementNamePrefix 89 92}}
+                {{#rollBetween() quickSettlementNamePrefix 93 96}}
+                <span>Thorn</span>
+                {{/rollBetween() quickSettlementNamePrefix 93 96}}
+                {{#rollBetween() quickSettlementNamePrefix 97 100}}
+                <span>Long</span>
+                {{/rollBetween() quickSettlementNamePrefix 97 100}}
                 {{#rollBetween() quickSettlementNameSuffix 1 4}}
-                <span>-moor</span>
+                <span>moor</span>
                 {{/rollBetween() quickSettlementNameSuffix 1 4}}
+                {{#rollBetween() quickSettlementNameSuffix 5 8}}
+                <span>ford</span>
+                {{/rollBetween() quickSettlementNameSuffix 5 8}}
+                {{#rollBetween() quickSettlementNameSuffix 9 12}}
+                <span>crag</span>
+                {{/rollBetween() quickSettlementNameSuffix 9 12}}
+                {{#rollBetween() quickSettlementNameSuffix 13 16}}
+                <span>watch</span>
+                {{/rollBetween() quickSettlementNameSuffix 13 16}}
+                {{#rollBetween() quickSettlementNameSuffix 17 20}}
+                <span>hope</span>
+                {{/rollBetween() quickSettlementNameSuffix 17 20}}
+                {{#rollBetween() quickSettlementNameSuffix 21 24}}
+                <span>wood</span>
+                {{/rollBetween() quickSettlementNameSuffix 21 24}}
+                {{#rollBetween() quickSettlementNameSuffix 25 28}}
+                <span>ridge</span>
+                {{/rollBetween() quickSettlementNameSuffix 25 28}}
+                {{#rollBetween() quickSettlementNameSuffix 29 32}}
+                <span>stone</span>
+                {{/rollBetween() quickSettlementNameSuffix 29 32}}
+                {{#rollBetween() quickSettlementNameSuffix 33 36}}
+                <span>haven</span>
+                {{/rollBetween() quickSettlementNameSuffix 33 36}}
+                {{#rollBetween() quickSettlementNameSuffix 37 40}}
+                <span>fall(s)</span>
+                {{/rollBetween() quickSettlementNameSuffix 37 40}}
+                {{#rollBetween() quickSettlementNameSuffix 41 44}}
+                <span>river</span>
+                {{/rollBetween() quickSettlementNameSuffix 41 44}}
+                {{#rollBetween() quickSettlementNameSuffix 45 48}}
+                <span>field</span>
+                {{/rollBetween() quickSettlementNameSuffix 45 48}}
+                {{#rollBetween() quickSettlementNameSuffix 49 52}}
+                <span>hill</span>
+                {{/rollBetween() quickSettlementNameSuffix 49 52}}
+                {{#rollBetween() quickSettlementNameSuffix 53 56}}
+                <span>bridge</span>
+                {{/rollBetween() quickSettlementNameSuffix 53 56}}
+                {{#rollBetween() quickSettlementNameSuffix 57 60}}
+                <span>mark</span>
+                {{/rollBetween() quickSettlementNameSuffix 57 60}}
+                {{#rollBetween() quickSettlementNameSuffix 61 64}}
+                <span>cairn</span>
+                {{/rollBetween() quickSettlementNameSuffix 61 64}}
+                {{#rollBetween() quickSettlementNameSuffix 65 68}}
+                <span>land</span>
+                {{/rollBetween() quickSettlementNameSuffix 65 68}}
+                {{#rollBetween() quickSettlementNameSuffix 69 72}}
+                <span>hall</span>
+                {{/rollBetween() quickSettlementNameSuffix 69 72}}
+                {{#rollBetween() quickSettlementNameSuffix 73 76}}
+                <span>mount</span>
+                {{/rollBetween() quickSettlementNameSuffix 73 76}}
+                {{#rollBetween() quickSettlementNameSuffix 77 80}}
+                <span>rock</span>
+                {{/rollBetween() quickSettlementNameSuffix 77 80}}
+                {{#rollBetween() quickSettlementNameSuffix 81 84}}
+                <span>brook</span>
+                {{/rollBetween() quickSettlementNameSuffix 81 84}}
+                {{#rollBetween() quickSettlementNameSuffix 85 88}}
+                <span>barrow</span>
+                {{/rollBetween() quickSettlementNameSuffix 85 88}}
+                {{#rollBetween() quickSettlementNameSuffix 89 92}}
+                <span>stead</span>
+                {{/rollBetween() quickSettlementNameSuffix 89 92}}
+                {{#rollBetween() quickSettlementNameSuffix 93 96}}
+                <span>home</span>
+                {{/rollBetween() quickSettlementNameSuffix 93 96}}
+                {{#rollBetween() quickSettlementNameSuffix 97 100}}
+                <span>wick</span>
+                {{/rollBetween() quickSettlementNameSuffix 97 100}}
             </td>
         </tr>
         {{/quickSettlementName}}
@@ -8051,6 +8193,64 @@
         {{/trollNames}}
 
         {{#combatAction}}
+            <tr>
+                <td>
+                    {{#rollBetween() combatAction 1 3}}
+                    <span>Compel a surrender.</span>
+                    {{/rollBetween() combatAction 1 3}}
+                    {{#rollBetween() combatAction 4 6}}
+                    <span>Coordinate with allies.</span>
+                    {{/rollBetween() combatAction 4 6}}
+                    {{#rollBetween() combatAction 7 9}}
+                    <span>Gather reinforcements</span>
+                    {{/rollBetween() combatAction 7 9}}
+                    {{#rollBetween() combatAction 10 13}}
+                    <span>Seize something or someone</span>
+                    {{/rollBetween() combatAction 10 13}}
+                    {{#rollBetween() combatAction 14 17}}
+                    <span>Provoke a reckless response</span>
+                    {{/rollBetween() combatAction 14 17}}
+                    {{#rollBetween() combatAction 18 21}}
+                    <span>Intimidate or frighten</span>
+                    {{/rollBetween() combatAction 18 21}}
+                    {{#rollBetween() combatAction 22 25}}
+                    <span>Reveal a surprising truth.</span>
+                    {{/rollBetween() combatAction 22 25}}
+                    {{#rollBetween() combatAction 26 29}}
+                    <span>Shift focus to someone or something else.</span>
+                    {{/rollBetween() combatAction 26 29}}
+                    {{#rollBetween() combatAction 30 33}}
+                    <span></span>
+                    {{/rollBetween() combatAction 30 33}}
+                    {{#rollBetween() combatAction 34 39}}
+                    <span></span>
+                    {{/rollBetween() combatAction 34 39}}
+                    {{#rollBetween() combatAction 40 45}}
+                    <span></span>
+                    {{/rollBetween() combatAction 40 45}}
+                    {{#rollBetween() combatAction 46 52}}
+                    <span></span>
+                    {{/rollBetween() combatAction 46 52}}
+                    {{#rollBetween() combatAction 53 60}}
+                    <span></span>
+                    {{/rollBetween() combatAction 53 60}}
+                    {{#rollBetween() combatAction 61 68}}
+                    <span></span>
+                    {{/rollBetween() combatAction 61 68}}
+                    {{#rollBetween() combatAction 69 78}}
+                    <span></span>
+                    {{/rollBetween() combatAction 69 78}}
+                    {{#rollBetween() combatAction 79 89}}
+                    <span></span>
+                    {{/rollBetween() combatAction 79 89}}
+                    {{#rollBetween() combatAction 90 99}}
+                    <span></span>
+                    {{/rollBetween() combatAction 90 99}}
+                    {{#rollBetween() combatAction 100}}
+                    <span></span>
+                    {{/rollTotal() combatAction 100}}
+                </td>
+            </tr>
         {{/combatAction}}
 
         {{#mysticBacklash}}
