--- a/Knight/knight.html
+++ b/Knight/knight.html
@@ -2991,8 +2991,7 @@
 				{
 					_.each(ids,function(id) 
 					{
-						getAttrs([
-						"repeating_armeDruidLion_"+id+"_leste", function (v) 
+						getAttrs(["repeating_armeDruidLion_"+id+"_leste"], function (v) 
 						{
 							var LL = v["repeating_armeDruidLion_"+id+"_leste"];
 							
