fixed spans for themes

--- a/Ironsworn/Ironsworn.html
+++ b/Ironsworn/Ironsworn.html
@@ -4049,25 +4049,25 @@
             <div class="sheet-theme sheet-hidden-flex">
                 <div class="sheet-oracle-title">THEME</div>
                 <div class="sheet-oracle-table">
-                    <div class="oracle-row"><span class="oracle-roll">1<1</span> <span class="sheet-oracle-result">
+                    <div class="oracle-row"><span class="oracle-roll">1</span><span class="sheet-oracle-result">
                                 Risk</span></div>
-                    <div class="oracle-row"><span class="oracle-roll">2<2</span> <span class="sheet-oracle-result">
+                    <div class="oracle-row"><span class="oracle-roll">2</span><span class="sheet-oracle-result">
                                 Ability</span></div>
-                    <div class="oracle-row"><span class="oracle-roll">3<3</span> <span class="sheet-oracle-result">
+                    <div class="oracle-row"><span class="oracle-roll">3</span><span class="sheet-oracle-result">
                                 Price</span></div>
-                    <div class="oracle-row"><span class="oracle-roll">4<4</span> <span class="sheet-oracle-result">
+                    <div class="oracle-row"><span class="oracle-roll">4</span><span class="sheet-oracle-result">
                                 Ally</span></div>
-                    <div class="oracle-row"><span class="oracle-roll">5<5</span> <span class="sheet-oracle-result">
+                    <div class="oracle-row"><span class="oracle-roll">5</span><span class="sheet-oracle-result">
                                 Battle</span></div>
-                    <div class="oracle-row"><span class="oracle-roll">6<6</span> <span class="sheet-oracle-result">
+                    <div class="oracle-row"><span class="oracle-roll">6</span><span class="sheet-oracle-result">
                                 Safety</span></div>
-                    <div class="oracle-row"><span class="oracle-roll">7<7</span> <span class="sheet-oracle-result">
+                    <div class="oracle-row"><span class="oracle-roll">7</span><span class="sheet-oracle-result">
                                 Survival</span></div>
-                    <div class="oracle-row"><span class="oracle-roll">8<8</span> <span class="sheet-oracle-result">
+                    <div class="oracle-row"><span class="oracle-roll">8</span><span class="sheet-oracle-result">
                                 Weapon</span></div>
-                    <div class="oracle-row"><span class="oracle-roll">9<9</span> <span class="sheet-oracle-result">
+                    <div class="oracle-row"><span class="oracle-roll">9</span><span class="sheet-oracle-result">
                                 Wound</span></div>
-                    <div class="oracle-row"><span class="oracle-roll">1010</span><span
+                    <div class="oracle-row"><span class="oracle-roll">10</span><span
                             class="sheet-oracle-result">Shelter</span></div>
                     <div class="oracle-row"><span class="oracle-roll">11</span><span
                             class="sheet-oracle-result">Leader</span></div>
