added matching logic for ask the oracle

--- a/Ironsworn/Ironsworn.html
+++ b/Ironsworn/Ironsworn.html
@@ -9654,10 +9654,13 @@
             <td class="sheet-oracle-dice"><span>{{almostCertain}}</span></td>
             <td class="sheet-oracle-table-text">
                 {{#rollBetween() almostCertain 11 100}}
-                <span>Yes</span>
+                <td class="sheet-oracle-table-text"><span>Yes</span></td>
                 {{/rollBetween() almostCertain 11 100}}
+                {{#rollTotal() almostCertain 11}}
+                <td colspan="2" class="sheet-subfooter">An extreme result or twist has occurred.</td>
+                {{/rollTotal() almostCertain 11}}
                 {{#^rollBetween() almostCertain 11 100}}
-                <span>No</span>
+                 <td class="sheet-oracle-table-text"><span>No</span></td>
                 {{/^rollBetween() almostCertain 11 100}}
             </td>
         </tr>
@@ -9667,10 +9670,13 @@
             <td class="sheet-oracle-dice"><span>{{likely}}</span></td>
             <td class="sheet-oracle-table-text">
                 {{#rollBetween() likely 26 100}}
-                <span>Yes</span>
+                <td class="sheet-oracle-table-text"><span>Yes</span></td>
                 {{/rollBetween() likely 26 100}}
+                {{#rollTotal() likely 26}}
+                <td colspan="2" class="sheet-subfooter">An extreme result or twist has occurred.</td>
+                {{/rollTotal() likely 26}}
                 {{#^rollBetween() likely 26 100}}
-                <span>No</span>
+                 <td class="sheet-oracle-table-text"><span>No</span></td>
                 {{/^rollBetween() likely 26 100}}
             </td>
         </tr>
@@ -9680,10 +9686,13 @@
             <td class="sheet-oracle-dice"><span>{{fiftyFifty}}</span></td>
             <td class="sheet-oracle-table-text">
                 {{#rollBetween() fiftyFifty 51 100}}
-                <span>Yes</span>
+                <td class="sheet-oracle-table-text"><span>Yes</span></td>
                 {{/rollBetween() fiftyFifty 51 100}}
+                {{#rollTotal() fiftyFifty 51}}
+                <td colspan="2" class="sheet-subfooter">An extreme result or twist has occurred.</td>
+                {{/rollTotal() fiftyFifty 51}}
                 {{#^rollBetween() fiftyFifty 51 100}}
-                <span>No</span>
+                 <td class="sheet-oracle-table-text"><span>No</span></td>
                 {{/^rollBetween() fiftyFifty 51 100}}
             </td>
         </tr>
@@ -9691,14 +9700,15 @@
         {{#unlikely}}
         <tr>
             <td class="sheet-oracle-dice"><span>{{unlikely}}</span></td>
-            <td class="sheet-oracle-table-text">
-                {{#rollBetween() unlikely 76 100}}
-                <span>Yes</span>
-                {{/rollBetween() unlikely 76 100}}
-                {{#^rollBetween() unlikely 76 100}}
-                <span>No</span>
-                {{/^rollBetween() unlikely 76 100}}
-            </td>
+            {{#rollBetween() unlikely 76 100}}
+            <td class="sheet-oracle-table-text"><span>Yes</span></td>
+            {{#rollTotal() unlikely 76}}
+            <td colspan="2" class="sheet-subfooter">An extreme result or twist has occurred.</td>
+            {{/rollTotal() unlikely 76}}
+            {{/rollBetween() unlikely 76 100}}
+            {{#^rollBetween() unlikely 76 100}}
+            <td class="sheet-oracle-table-text"><span>No</span></td>
+            {{/^rollBetween() unlikely 76 100}}
         </tr>
         {{/unlikely}}
         {{#smallChance}}
@@ -9706,10 +9716,13 @@
             <td class="sheet-oracle-dice"><span>{{smallChance}}</span></td>
             <td class="sheet-oracle-table-text">
                 {{#rollBetween() smallChance 91 100}}
-                <span>Yes</span>
+                <td class="sheet-oracle-table-text"><span>Yes</span></td>
                 {{/rollBetween() smallChance 91 100}}
+                {{#rollTotal() smallChance 91}}
+                <td colspan="2" class="sheet-subfooter">An extreme result or twist has occurred.</td>
+                {{/rollTotal() smallChance 91}}
                 {{#^rollBetween() smallChance 91 100}}
-                <span>No</span>
+                <td class="sheet-oracle-table-text"><span>No</span></td>
                 {{/^rollBetween() smallChance 91 100}}
             </td>
         </tr>
