fixed formatting of columns for roll template

--- a/Ironsworn/Ironsworn.html
+++ b/Ironsworn/Ironsworn.html
@@ -6094,7 +6094,8 @@
                             <button type="roll" title="Almost Certain" name="rollalmostcertain"
                                 value="&{template:ironswornoracles} {{header=Almost Certain}} {{almostCertain=[[1d100]]}}"></button>
                         </div>
-                        <span class="sheet-oracle-roll sheet-preview-roll">11 or greater</span><span class="sheet-oracle-result">Almost
+                        <span class="sheet-oracle-roll sheet-preview-roll">11 or greater</span><span
+                            class="sheet-oracle-result">Almost
                             Certain</span>
                     </div>
                     <div class="oracle-row">
@@ -6104,13 +6105,15 @@
                             class="sheet-oracle-result">Likely</span>
                     </div>
                     <div class="oracle-row">
-                        <div class="sheet-button-container-preview"><button type="roll" title="50/50" name="rollfiftyfifty"
+                        <div class="sheet-button-container-preview"><button type="roll" title="50/50"
+                                name="rollfiftyfifty"
                                 value="&{template:ironswornoracles} {{header=50/50}} {{fiftyFifty=[[1d100]]}}"></button>
                         </div><span class="sheet-oracle-roll sheet-preview-roll">51 or greater</span><span
                             class="sheet-oracle-result">50/50</span>
                     </div>
                     <div class="oracle-row">
-                        <div class="sheet-button-container-preview"><button type="roll" title="Unlikely" name="rollunlikely"
+                        <div class="sheet-button-container-preview"><button type="roll" title="Unlikely"
+                                name="rollunlikely"
                                 value="&{template:ironswornoracles} {{header=Unlikely}} {{unlikely=[[1d100]]}}"></button>
                         </div><span class="sheet-oracle-roll sheet-preview-roll">76 or greater</span><span
                             class="sheet-oracle-result">Unlikely</span>
@@ -6119,7 +6122,8 @@
                         <div class="sheet-button-container-preview"><button type="roll" title="Small Chance"
                                 name="rollsmallchance"
                                 value="&{template:ironswornoracles} {{header=Small Chance}} {{smallChance=[[1d100]]}}"></button>
-                        </div><span class="sheet-oracle-roll sheet-preview-roll">91 or greater</span><span class="sheet-oracle-result">Small
+                        </div><span class="sheet-oracle-roll sheet-preview-roll">91 or greater</span><span
+                            class="sheet-oracle-result">Small
                             Chance</span>
                     </div>
                 </div>
@@ -9652,49 +9656,43 @@
         {{#almostCertain}}
         <tr>
             <td class="sheet-oracle-dice"><span>{{almostCertain}}</span></td>
-            <td class="sheet-oracle-table-text">
-                {{#rollBetween() almostCertain 11 100}}
-                <td class="sheet-oracle-table-text"><span>Yes</span></td>
-                {{/rollBetween() almostCertain 11 100}}
-                {{#rollTotal() almostCertain 11}}
-                <td colspan="2" class="sheet-subfooter">An extreme result or twist has occurred.</td>
-                {{/rollTotal() almostCertain 11}}
-                {{#^rollBetween() almostCertain 11 100}}
-                 <td class="sheet-oracle-table-text"><span>No</span></td>
-                {{/^rollBetween() almostCertain 11 100}}
-            </td>
+            {{#rollBetween() almostCertain 11 100}}
+            <td class="sheet-oracle-table-text"><span>Yes</span></td>
+            {{/rollBetween() almostCertain 11 100}}
+            {{#rollTotal() almostCertain 11}}
+            <td colspan="2" class="sheet-subfooter">An extreme result or twist has occurred.</td>
+            {{/rollTotal() almostCertain 11}}
+            {{#^rollBetween() almostCertain 11 100}}
+            <td class="sheet-oracle-table-text"><span>No</span></td>
+            {{/^rollBetween() almostCertain 11 100}}
         </tr>
         {{/almostCertain}}
         {{#likely}}
         <tr>
             <td class="sheet-oracle-dice"><span>{{likely}}</span></td>
-            <td class="sheet-oracle-table-text">
-                {{#rollBetween() likely 26 100}}
-                <td class="sheet-oracle-table-text"><span>Yes</span></td>
-                {{/rollBetween() likely 26 100}}
-                {{#rollTotal() likely 26}}
-                <td colspan="2" class="sheet-subfooter">An extreme result or twist has occurred.</td>
-                {{/rollTotal() likely 26}}
-                {{#^rollBetween() likely 26 100}}
-                 <td class="sheet-oracle-table-text"><span>No</span></td>
-                {{/^rollBetween() likely 26 100}}
-            </td>
+            {{#rollBetween() likely 26 100}}
+            <td class="sheet-oracle-table-text"><span>Yes</span></td>
+            {{/rollBetween() likely 26 100}}
+            {{#rollTotal() likely 26}}
+            <td colspan="2" class="sheet-subfooter">An extreme result or twist has occurred.</td>
+            {{/rollTotal() likely 26}}
+            {{#^rollBetween() likely 26 100}}
+            <td class="sheet-oracle-table-text"><span>No</span></td>
+            {{/^rollBetween() likely 26 100}}
         </tr>
         {{/likely}}
         {{#fiftyFifty}}
         <tr>
             <td class="sheet-oracle-dice"><span>{{fiftyFifty}}</span></td>
-            <td class="sheet-oracle-table-text">
-                {{#rollBetween() fiftyFifty 51 100}}
-                <td class="sheet-oracle-table-text"><span>Yes</span></td>
-                {{/rollBetween() fiftyFifty 51 100}}
-                {{#rollTotal() fiftyFifty 51}}
-                <td colspan="2" class="sheet-subfooter">An extreme result or twist has occurred.</td>
-                {{/rollTotal() fiftyFifty 51}}
-                {{#^rollBetween() fiftyFifty 51 100}}
-                 <td class="sheet-oracle-table-text"><span>No</span></td>
-                {{/^rollBetween() fiftyFifty 51 100}}
-            </td>
+            {{#rollBetween() fiftyFifty 51 100}}
+            <td class="sheet-oracle-table-text"><span>Yes</span></td>
+            {{/rollBetween() fiftyFifty 51 100}}
+            {{#rollTotal() fiftyFifty 51}}
+            <td colspan="2" class="sheet-subfooter">An extreme result or twist has occurred.</td>
+            {{/rollTotal() fiftyFifty 51}}
+            {{#^rollBetween() fiftyFifty 51 100}}
+            <td class="sheet-oracle-table-text"><span>No</span></td>
+            {{/^rollBetween() fiftyFifty 51 100}}
         </tr>
         {{/fiftyFifty}}
         {{#unlikely}}
@@ -9714,17 +9712,15 @@
         {{#smallChance}}
         <tr>
             <td class="sheet-oracle-dice"><span>{{smallChance}}</span></td>
-            <td class="sheet-oracle-table-text">
-                {{#rollBetween() smallChance 91 100}}
-                <td class="sheet-oracle-table-text"><span>Yes</span></td>
-                {{/rollBetween() smallChance 91 100}}
-                {{#rollTotal() smallChance 91}}
-                <td colspan="2" class="sheet-subfooter">An extreme result or twist has occurred.</td>
-                {{/rollTotal() smallChance 91}}
-                {{#^rollBetween() smallChance 91 100}}
-                <td class="sheet-oracle-table-text"><span>No</span></td>
-                {{/^rollBetween() smallChance 91 100}}
-            </td>
+            {{#rollBetween() smallChance 91 100}}
+            <td class="sheet-oracle-table-text"><span>Yes</span></td>
+            {{/rollBetween() smallChance 91 100}}
+            {{#rollTotal() smallChance 91}}
+            <td colspan="2" class="sheet-subfooter">An extreme result or twist has occurred.</td>
+            {{/rollTotal() smallChance 91}}
+            {{#^rollBetween() smallChance 91 100}}
+            <td class="sheet-oracle-table-text"><span>No</span></td>
+            {{/^rollBetween() smallChance 91 100}}
         </tr>
         {{/smallChance}}
         {{#payThePrice}}
